# climopy

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  INSTALL.rst  README.md  README.rst  __init__.py  julia.ipynb  metpy.ipynb  pandas.ipynb  readthedocs.yml  requirements.txt  setup.cfg  setup.py
ClimPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
atmosdata/: __init__.py  analysis.py  base.py  data.py  diff.py  geocalc.py
ci/: environment.yml  run-linter.sh
climopy/: __init__.py  accessor.py  cfvariable.py  const.py  context.py  definitions.py  derivations.py  diff.py  downloads.py  physics.py  spectral.py  spherical.py  unit.py  units.py  utils.py  var.py  waves.py
climopy/deprecated/: notimplemented.py  quantity.py
climopy/internals/: __init__.py  array.py  context.py  docstring.py  permute.py  quack.py  quant.py  warnings.py
climpy/: __init__.py  analysis.py  arraytools.py  const.py  diff.py  downloads.py  geotools.py  gridtools.py  io.py  math.py  misc.py  misctools.py  ncio.py  oa.py  spectral.py  spherical.py  tags  units.py  utils.py  var.py  waq.py  waves.py
climpy/cbook/: __init__.py
climpy/const/: __init__.py
docs/: Makefile  api.rst  arraytools.rst  authors.rst  conf.py  diff.rst  downloads.rst  environment.yml  eofs.rst  gridtools.rst  includeme.rst  index.rst  install.rst  julia.ipynb  metpy.ipynb  misctools.rst  modules.rst  oa.ipynb  oa.rst  pandas.ipynb  power.bib  quickstart.ipynb  quickstart.rst  refs.bib  requirements.txt  showcase.rst  spectral.rst  timeseries.rst  usage.rst  waq.rst  why.rst
(+121 files in other folders)
