[metadata]
name = climopy
author = Luke Davis
author_email = lukelbd@gmail.com
maintainer = Luke Davis
maintainer_email = lukelbd@gmail.com
license = MIT
description = A data analysis toolkit for climate scientists.
url = https://climopy.readthedocs.io
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

project_urls =
    Bug Tracker = https://github.com/lukelbd/proplot/issues
    Documentation = https://proplot.readthedocs.io
    Source Code = https://github.com/lukelbd/proplot

[options]
packages = climopy
setup_requires = setuptools>=44; toml; setuptools_scm>=3.4.3
install_requires = numpy; scipy; pint; pandas; xarray; cf_xarray
include_package_data = True
python_requires = >=3.8.0
